# term_video_cli

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  NOTICE.md  README.md  flake.nix  rust-toolchain.toml
src/: cli.rs  downloder.rs  error.rs  main.rs  terminal.rs  util.rs  video_processing.rs  video_processor.rs
