[package]
name = "term_video_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
# opencv = "0.90.0"
rusty_ytdl = "0.7.1"
term_size = "0.3.2"
tokio = { version = "1.37.0", features = ["full"]}
