[package]
name = "term_video_cli"
version = "0.1.0"
edition = "2024"
authors = ["SL9-1994"]
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "3.0.0"
image = "0.25.1"
term_size = "0.3.2"
thiserror = "2.0.12"
